# gpt-computer-assistant

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENCE  LICENSE  MANIFEST.in  README.TR.md  README.md  README.zh_CN.md  README.zh_TW.md  app.spec  bump.py  dont_aprove  gca_setup_generator.py  hook-crewai.py  hook-embedchain.llm.py  project.toml  pyproject.toml  pytest.ini  refactor.py  requirements.in  requirements.txt  requirements_comb.txt  run.py  run_main_server.py  run_tools_server.py  setup.py  setup_package.py  smithery.yaml
.github/workflows/: build_dmg.yml  build_openai_dmg.yml  build_openai_exe.yml  custom.yml  custom_package.yml  deploys.yml  package.yml  publish.yml  refactor.yml  release.yml  release_generation.yml  requirement_controller.yml  run_uv_commands.yml  test_publisher.yml  unit_tests.yml
.github/workflows/builds/openai/: build_dmg.yml
build_scripts/hooks/: hook-PyQt5.py
build_scripts/openai/: macos_build.sh  windows_build.sh
example_use_cases/: workday_summerizer.md
gpt_assistant/: __init__.py  gpt_assistant.py  llm.py
gpt_assistant/agent/: agent.py  assistant.py  background.py  proccess.py
gpt_assistant/audio/: record.py  tts.py
gpt_assistant/gui/: signal.py
gpt_assistant/screen/: shot.py
gpt_assistant/utils/: db.py
gpt_computer_assistant/: __init__.py  agentic.py  api.py  character.py  classes.py  custom_callback.py  display_tools.py  gpt_computer_assistant.py  llm.py  llm_settings.py  remote.py  standard_tools.py  start.py  teams.py  tooler.py  top_bar_wrapper.py  version.py
gpt_computer_assistant/agent/: __init__.py  agent.py  agent_tools.py  assistant.py  background.py  chat_history.py  proccess.py  process.py
gpt_computer_assistant/audio/: __init__.py  input_box.py  record.py  stt.py  tts.py  wake_word.py
gpt_computer_assistant/audio/stt_providers/: openai.py  openai_whisper_local.py
gpt_computer_assistant/audio/tts_providers/: microsoft_local.py  openai.py
gpt_computer_assistant/cu/: ask_anthropic.py  computer.py  mcp_langchain.ipynb
gpt_computer_assistant/gui/: button.py  llmsettings.py  settings.py  signal.py
gpt_computer_assistant/mcp/: tool.py
gpt_computer_assistant/screen/: shot.py
gpt_computer_assistant/utils/: chat_history.py  db.py  folder.py  function.py  kot_db.py  pypi.py  telemetry.py  train.py  user_id.py
gpt_computer_assistant/utils/media/: icon.icns
hooks/: hook-embedchain.py
os/: macos_build.sh
src/upsonic/: __init__.py  exception.py  get_version.py  reliability_processor.py  server_manager.py  system_id.py  tools.py
src/upsonic/client/: base.py  latest_upsonic_client.py  price.py  printing.py  trace.py
src/upsonic/client/agent_configuration/: agent_configuration.py
src/upsonic/client/direct_llm_call/: direct_llm_cal.py
src/upsonic/client/knowledge_base/: knowledge_base.py
src/upsonic/client/level_one/: call.py
src/upsonic/client/level_two/: agent.py
src/upsonic/client/level_utilized/: utility.py
src/upsonic/client/markdown/: markdown.py
src/upsonic/client/multi_agent/: multi_agent.py
src/upsonic/client/others/: others.py
src/upsonic/client/storage/: storage.py
src/upsonic/client/tasks/: task_response.py  tasks.py
src/upsonic/client/tools/: __init__.py  tools.py
src/upsonic/server/: __init__.py  api.py
src/upsonic/server/level_one/: call.py
src/upsonic/storage/: caching.py  configuration.py  folder.py
src/upsonic/tools_server/: __init__.py  function_client.py  tools_client.py
src/upsonicai/: __init__.py
src/upsonicai/client/: base.py
src/upsonicai/server/: api.py
tests/client/: test_call.py
tests/clienta/: test_call.py
tests/server/: test_call.py  test_configuration.py  test_function_client.py  test_mcp_client.py  test_tools_api.py  test_tools_functions.py
(+36 files in other folders)
